--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "react-query": "^3.39.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0"
   }
 }
